--- a/client/package.json
+++ b/client/package.json
@@ -1,41 +1,21 @@
 {
-  "name": "youtube-downloader-client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "youtube-downloader",
+  "version": "1.0.0",
+  "description": "A YouTube video downloader web application",
+  "main": "server.js",
+  
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.4.0",
-    "lucide-react": "^0.263.1",
-    "web-vitals": "^2.1.4"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
+    "@distube/ytdl-core": "^4.16.12",
+    "fs-extra": "^11.1.1",
+    "path": "^0.12.7"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:5000"
+  "keywords": ["youtube", "downloader", "react", "nodejs"],
+  "author": "Your Name",
+  "license": "MIT"
 }
