--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "youtube-downloader",
   "version": "1.0.0",
   "description": "A YouTube video downloader web application",
-  "main": "server.js",
+  "main": "server/server.js",
   
   "dependencies": {
     "express": "^4.18.2",
@@ -16,8 +16,14 @@
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "npm run build && node server/server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd server && nodemon server.js",
+    "client": "cd client && npm start",
+    "build": "cd client && npm install && npm run build",
+    "install-client": "cd client && npm install",
+    "install-server": "cd server && npm install",
+    "install-all": "npm run install-server && npm run install-client"
   },
   "keywords": ["youtube", "downloader", "react", "nodejs"],
   "author": "Your Name",
