--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "multer": "^1.4.5-lts.1",
     "@distube/ytdl-core": "^4.16.12",
     "fs-extra": "^11.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
