--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "start": "npm run build && node server/server.js",
+    "start": "node server/server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && nodemon server.js",
     "client": "cd client && npm start",
-    "build": "cd client && npm install && npm run build",
+    "build": "npm run install-all && cd client && npm run build",
     "install-client": "cd client && npm install",
     "install-server": "cd server && npm install",
     "install-all": "npm run install-server && npm run install-client"
